--- a/tasks/noauto_uninstall_Archlinux.yml
+++ b/tasks/noauto_uninstall_Archlinux.yml
@@ -15,7 +15,7 @@
       community.general.pacman:
         name: "{{ package }}"
         state: absent
-      loop: "{{ virtualbox_guest_pkgs }}"
+      loop: "{{ virtualbox_guest_distro_pkgs }}"
       loop_control:
         loop_var: package
       become: true
