--- a/vars/Debian.yml
+++ b/vars/Debian.yml
@@ -5,7 +5,7 @@ virtualbox_guest_dep_pkgs:
   - dkms
   - linux-headers-generic
 
-virtualbox_guest_pkgs:
+virtualbox_guest_distro_pkgs:
   - virtualbox-guest-additions-iso
   - virtualbox-guest-dkms
   - virtualbox-guest-source
