--- a/vars/FreeBSD.yml
+++ b/vars/FreeBSD.yml
@@ -2,7 +2,7 @@
 virtualbox_guest_dep_pkgs:
   - virtualbox-ose-kmod
 
-virtualbox_guest_pkgs:
+virtualbox_guest_distro_pkgs:
   - virtualbox-ose-additions
 
 virtualbox_guest_installer: "VBoxLinuxAdditions.run"
