--- a/molecule/default/molecule.yml
+++ b/molecule/default/molecule.yml
@@ -8,6 +8,8 @@ platforms:
   - name: instance
     box: "pluggero/${MOLECULE_DISTRO:-debian12}-ansible"
     box_version: "${MOLECULE_VAGRANT_BOX_VERSION:-2025.12.28}"
+    config_options:
+      ssh.shell: "${MOLECULE_SSH_SHELL:-/bin/bash}"
 provisioner:
   name: ansible
   playbooks:
