--- a/molecule/default/prepare.yml
+++ b/molecule/default/prepare.yml
@@ -3,15 +3,29 @@
   hosts: all
   gather_facts: true
 
+  vars:
+    role_path: "{{ playbook_dir }}/../.."  # noqa: var-naming[read-only]
+
   vars_files:
     - ../../defaults/main.yml
     - ../../vars/molecule.yml
 
   tasks:
+    - name: Include OS-specific variables
+      ansible.builtin.include_vars: "{{ var_file }}"
+      with_first_found:
+        - "{{ role_path }}/vars/{{ ansible_distribution }}-{{ ansible_distribution_major_version }}.yml"
+        - "{{ role_path }}/vars/{{ ansible_os_family }}-{{ ansible_distribution_major_version }}.yml"
+        - "{{ role_path }}/vars/{{ ansible_distribution }}.yml"
+        - "{{ role_path }}/vars/{{ ansible_os_family }}.yml"
+        - "{{ role_path }}/vars/{{ ansible_lsb.id }}.yml"
+      loop_control:
+        loop_var: var_file
+
     - name: Import installed VirtualBox Guest Additions version check
       ansible.builtin.include_tasks: "../../tasks/noauto_check_installed_version.yml"
       when: virtualbox_guest_installed_version is not defined
 
     - name: Uninstall current VirtualBox Guest Additions source installation
-      ansible.builtin.include_tasks: "../../tasks/noauto_uninstall_source.yml"
+      ansible.builtin.include_tasks: "../../tasks/noauto_uninstall.yml"
       when: virtualbox_guest_installed_version is defined and virtualbox_guest_installed_version != ""
