--- a/tasks/noauto_uninstall.yml
+++ b/tasks/noauto_uninstall.yml
@@ -12,6 +12,10 @@
       loop_control:
         loop_var: task_file
 
+    - name: Import installed VirtualBox Guest Additions version check
+      ansible.builtin.include_tasks: "../../tasks/noauto_check_installed_version.yml"
+      when: virtualbox_guest_installed_version is defined and virtualbox_guest_installed_version != ""
+
     - name: Uninstall VirtualBox Guest Additions from source
       ansible.builtin.include_tasks: noauto_uninstall_source.yml
       when: virtualbox_guest_installed_version is defined and virtualbox_guest_installed_version != ""
