--- a/tasks/noauto_uninstall_Debian.yml
+++ b/tasks/noauto_uninstall_Debian.yml
@@ -16,7 +16,7 @@
       ansible.builtin.apt:
         name: "{{ package }}"
         state: absent
-      loop: "{{ virtualbox_guest_pkgs }}"
+      loop: "{{ virtualbox_guest_distro_pkgs }}"
       loop_control:
         loop_var: package
       become: true
