--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -50,8 +50,13 @@ jobs:
         include:
           - vagrant_box: debian12
             vagrant_box_version: "2025.12.28"
+            vagrant_ssh_shell: "/bin/bash"
           - vagrant_box: archlinux
             vagrant_box_version: "2025.12.21"
+            vagrant_ssh_shell: "/bin/bash"
+          - vagrant_box: freebsd14
+            vagrant_box_version: "2026.01.19"
+            vagrant_ssh_shell: "/bin/sh"
     env:
       VBOX_VERSION: "7.1.12"
       VBOX_DEB_DISTRO: "Ubuntu"
@@ -141,6 +146,7 @@ jobs:
           ANSIBLE_FORCE_COLOR: "1"
           MOLECULE_DISTRO: ${{ matrix.vagrant_box }}
           MOLECULE_VAGRANT_BOX_VERSION: ${{ matrix.vagrant_box_version }}
+          MOLECULE_SSH_SHELL: ${{ matrix.vagrant_ssh_shell }}
 
   status-check:
     name: Status Check
