feat: Addition of alpine support

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -48,6 +48,9 @@ jobs:
     strategy:
       matrix:
         include:
+          - vagrant_box: alpinelinux323
+            vagrant_box_version: "2026.02.08"
+            vagrant_ssh_shell: "/bin/bash"
           - vagrant_box: debian12
             vagrant_box_version: "2025.12.28"
             vagrant_ssh_shell: "/bin/bash"
