--- a/meta/main.yml
+++ b/meta/main.yml
@@ -10,6 +10,9 @@ galaxy_info:
   license: license (MIT)
   min_ansible_version: "2.10"
   platforms:
+    - name: Alpine
+      versions:
+        - "all"
     - name: ArchLinux
       versions:
         - all
