--- a/tasks/01_install.yml
+++ b/tasks/01_install.yml
@@ -12,10 +12,10 @@
       loop_control:
         loop_var: var_file
 
-    - name: Set installation method to package for FreeBSD
+    - name: Set installation method to package for FreeBSD and Alpine
       ansible.builtin.set_fact:
         virtualbox_guest_install_method: "package"
-      when: ansible_os_family == 'FreeBSD'
+      when: ansible_os_family in ['FreeBSD', 'Alpine']
 
     - name: Install OS-specific dependencies
       ansible.builtin.include_tasks: "{{ task_file }}"
