--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -36,10 +36,8 @@ jobs:
           yamllint .
 
       - name: Run ansible-lint
-        uses: ansible/ansible-lint@7f6abc5ef97d0fb043a0f3d416dfbc74399fbda0 # v26.1.1
-        with:
-          working_directory: "pluggero.virtualbox_guest"
-          requirements_file: "requirements.yml"
+        run: |
+          ansible-lint .
 
   molecule:
     name: Molecule
