--- a/molecule/default/prepare.yml
+++ b/molecule/default/prepare.yml
@@ -5,6 +5,9 @@
 
   vars:
     role_path: "{{ playbook_dir }}/../.."  # noqa: var-naming[read-only]
+    ansible_user: ansible
+    ansible_password: ansible
+    ansible_become_password: ansible
 
   vars_files:
     - ../../defaults/main.yml
