--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -77,6 +77,12 @@ jobs:
       - name: Install test dependencies
         run: pip3 install -r requirements.txt
 
+      - name: Unload KVM kernel modules
+        run: |
+          echo "Unloading KVM kernel modules to avoid conflicts with VirtualBox..."
+          sudo modprobe -r kvm_intel kvm_amd kvm || true
+          lsmod | grep kvm || echo "KVM modules successfully unloaded"
+
       - name: Get VirtualBox build ID
         id: get-build-id
         run: |
